# openenv-data-clean

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  eval.py  inference.py  models.py  openenv.yaml  pyproject.toml  train.py
data_clean_env/: __init__.py  client.py  inference.py  models.py  pyproject.toml
data_clean_env/server/: Dockerfile  action_parser.py  app.py  environment.py  tasks.py
server/: app.py  environment.py  graders.py  tasks.py
